blog page designed

--- a/templates/home.html
+++ b/templates/home.html
@@ -52,7 +52,7 @@
     backface-visibility: hidden;
     transform-style: preserve-3d;
     display: grid;
-    align-content: center:
+    align-content: center;
   }
 
   .card__front {
@@ -102,10 +102,6 @@
 
   .card__back {
     transform: rotateY(.5turn);
-    {% comment %} color: var(--clr); {% endcomment %}
-    {% comment %} background: #333; {% endcomment %}
-
-
   }
 
 
