--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -18,14 +18,14 @@
         text-decoration: none;
         transition: all 0.3s ease-in;
     }
-    .my-bg{
-         background-color: #2E3233;
+    .header_container {
     }
     .carousel {
         width: 100%;
+        height: 500px;
     }
     .card {
-        height: 250px !important;
+        height: 200px !important;
     }
     .card-title {
         text-align: center;
@@ -35,6 +35,10 @@
     }
     .search-input {
         color: black;
+    }
+    .search_container {
+        width: 100%;
+        margin-top: -20px;
     }
     .col {
         display: flex;
@@ -46,7 +50,7 @@
         margin-top: -50px;
         height: 470px !important;
         width: 325px !important;
-        border: 1px solid greenyellow;
+        border: 8px solid rgb(29, 28, 28);
     }
     .card_buttons {
         display: flex;
@@ -54,18 +58,21 @@
     .card-box {
         position: relative;
         background: black;
+        height: 350px !important;
+        
     }
     .card-image {
         position: absolute;
         bottom: 50%;
-        left: 50%;
+        left: 75%;
         transform: translateX(-50%);
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         height: 460px;
-        width: 330px;
+        width: 400px;
+        border: 2px solid gray;
         background: linear-gradient(135deg, blue, red);
         transition: 0.5s;
     }
@@ -79,6 +86,37 @@
     .navbar_box {
         width: 50%;
         margin-left: 10px;
+    }
+    .card-body-container {
+        margin-top: -50px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .likes_comments {
+        width: 200px;
+        display: flex;
+        justify-content: space-between;
+    }
+    .blog_buttons_container {
+        display: flex;
+        margin-top: 25px;
+    }
+    .blog_buttons_container a {
+        width: 125px;
+        height: 50px;
+        margin: 2px !important;
+        text-align: center;
+    }
+    .blog-text {
+        color: white !important;
+    }
+    .post-text {
+        text-align: center;
+    }
+    .blog-tag {
+        color: #0071de !important;
     }
 </style>
 
@@ -99,27 +137,16 @@
     {% endif %}
 </div>
 
-<hr/>
-{% comment %} <div>
-{% for tags in toptags  %} 
-.values
-    <ul>
-       {{tags}} {{tags.title}}
-    </ul>
-
-{% endfor %}
-</div> {% endcomment %}
 
 <br>
 <div class="container test_container" >
-    <div class="card">
+    <div class="card header_container">
         <h4 class="card-title" style="color: #000;">Search For Achievements by Tag</h4>
         <form action="/search">
             <div class="row flex-middle">
-                <div class="col sm-12">
-                        <input class="search-input" type="text" name="tags" id="paperInputs2" placeholder="Search by Tags" style="color: #000; font-size: 18px;">
+                <div class="col search_container">
+                    <input class="search-input" type="text" name="tags" id="paperInputs2" placeholder="Search by Tags" style="color: #000; font-size: 18px;">
                     <button type="submit" class="paper-btn btn-primary search-button" value="Primary">Search</button>
-
                 </div>
             </div>
         </form>
@@ -130,35 +157,44 @@
      <div class="row flex-center carousel">
         {% for post in results %}
         <div class="card carousel-item card_container card-box">
-            <a class="card-link" href="/article/{{post.id}}" >
+         
        
        
-                <div class="card-body">
-                    <h4 class="card-title">{{ post.title}}</h4>
-                        <h5 class="card-subtitle">Created by {{ post.author }} {{post.list_date| timesince}} ago</h5>
-                        <p class="card-text">{{post.body|truncatechars:50}}</p>
-                        <hr>
-                        {% if post.author.id  != request.user.id %}
-                            <p>Tag: {{post.tags}}</p>
-                            <p><i class="fas fa-hand-spock"></i> Likes: {{post.likes}} </p>
-                            <p> Comments: {{post.comments.count}} </p>
-                        {% else %}
-                        <p>Tag: {{post.tags}}</p>
-                        <p><i class="fas fa-hand-spock"></i> Likes: {{post.likes}} </p>
-                        <p>Comments: {{post.comments.count}} </p>
-                        <a class="paper-btn btn-danger" popover-top=" ARE YOU SURE❓" href="/delete_post/{{post.id}}">Delete</a>
-                        <a  class="paper-btn btn-success"  href="/edit_post/{{post.id}}">Edit Post</a>
-                        {% endif %}
-                        <div class="card-image">
-                            {% if post.blog_image %}
-                                <img
-                                src="{{post.blog_image.url}}"
-                                alt="Blog Image" />
-                            {% endif %}
+                <div class="card-body card-body-container">
+                    <h3 class="blog-text">{{ post.title}}</h3>
+                    <h5 class="card-subtitle">By: {{ post.author }}</h5>
+                    <h5 class="card-subtitle">Created: {{post.list_date| timesince}} ago</h5>
+                    <br>
+                    <p class="post-text blog-text">{{post.body|truncatechars:50}}</p>
+                    {% if post.author.id  != request.user.id %}
+                        <p class="blog-tag blog-text">Tag: {{post.tags}}</p>
+                        <div class="likes_comments">
+                            <p class="blog-text"><i class="fas fa-hand-spock"></i> Likes: {{post.likes}} </p>
+                            <p class="blog-text">Comments: {{post.comments.count}} </p>
                         </div>
+                    {% else %}
+                    <br>
+                    <p class="blog-tag blog-text">Tag: {{post.tags}}</p>
+                    <div class="likes_comments">
+                        <p class="blog-text"><i class="fas fa-hand-spock"></i> Likes: {{post.likes}} </p>
+                        <p class="blog-text">Comments: {{post.comments.count}} </p>
+                    </div>
+                    <div class="blog_buttons_container">
+                        <a class="paper-btn btn-danger" popover-top=" ARE YOU SURE❓" href="/delete_post/{{post.id}}">Delete</a>
+                        <a class="paper-btn btn-success"  href="/edit_post/{{post.id}}">Edit Post</a>
+                        <a class="paper-btn btn-secondary" href="/article/{{post.id}}" >View Post</a>
+                    </div>
+                    {% endif %}
+                    <div class="card-image">
+                        {% if post.blog_image %}
+                            <img
+                            src="{{post.blog_image.url}}"
+                            alt="Blog Image" />
+                        {% endif %}
+                    </div>
                 </div>
 
-                </a>
+                <!-- </a> -->
 
                 </div>
         {% endfor %}
