--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -118,6 +118,12 @@
     .blog-tag {
         color: #0071de !important;
     }
+    .view_post_button {
+        text-align: center;
+        font-size: 24px;
+        margin-top: 35px;
+        width: 325px;
+    }
 </style>
 
 <br/>
@@ -172,6 +178,7 @@
                             <p class="blog-text"><i class="fas fa-hand-spock"></i> Likes: {{post.likes}} </p>
                             <p class="blog-text">Comments: {{post.comments.count}} </p>
                         </div>
+                        <a class="paper-btn view_post_button" href="/article/{{post.id}}" >View Post</a>
                     {% else %}
                     <br>
                     <p class="blog-tag blog-text">Tag: {{post.tags}}</p>
