--- a/templates/home.html
+++ b/templates/home.html
@@ -182,7 +182,7 @@
 
       {% if user.is_authenticated %} 
         <div class="card-body">
-          <h3 class="card-text"> We hope You are enjoying the site!</h3>
+          <h3 class="card-text" style="text-align: center;"> We hope You are enjoying the site!</h3>
         </div>
       {% endif %}
     </div>
@@ -201,7 +201,7 @@
     <p class="card-header text-danger">PLAN</p> 
    <div class="card-body">
     <h5 class="card-title">  Make better task arrangements:</h5> 
-    <p class="card-text">by having a view of your week. 
+    <p class="card-text">By having a view of your week. 
      Our site will help you achieve this while maintaining balance.</p>
    </div>
   </div>
@@ -215,7 +215,7 @@
     <p class="card-header text-warning">TRACK</p>
    <div class="card-body">
     <h5 class="card-title"> Keep up with important practices:</h5>
-    <p class="card-text"> exercise, water consumption, academics, book reading etc. 
+    <p class="card-text"> Exercise, water consumption, academics, book reading etc. 
      Live life with momentum.</p>
    </div>
   </div>
@@ -228,7 +228,7 @@
     <p class="card-header text-success">LISTS</p>
     <div class="card-body">
      <h5 class="card-title">Always know your progress toward a goal:</h5> 
-      <p class="card-text"> by tracking to-do items. 
+      <p class="card-text"> By tracking to-do items. 
        Tasks in lists can be edited know exactly when to do what.</p>
     </div>
    </div>
