project is completely designed and functional

--- a/templates/500.html
+++ b/templates/500.html
@@ -16,7 +16,7 @@
   <body>
 
 <div class="navbar_box">
-    <a href="/" class="paper-btn btn-info">Home</a>
+    <a href="/home" class="paper-btn btn-info">Home</a>
 </div>
 
 <p> Whoops! 500 Error</p>
