--- a/templates/forms/generic_form.html
+++ b/templates/forms/generic_form.html
@@ -16,7 +16,7 @@
   <br/>
 
   <div class="navbar_box">
-    <a href="/" class="paper-btn btn-info">Home</a>
+    <a href="/home" class="paper-btn btn-info">Home</a>
     <a href="{% url 'journal' %}" class="paper-btn btn-info">Your Journal</a>
   </div>
       <div class="container">
