--- a/templates/home.html
+++ b/templates/home.html
@@ -130,6 +130,10 @@
     text-align: center;
   }
 
+  .tri-cards {
+    margin-top: -25px;
+  }
+
   </style>
 
 
@@ -194,7 +198,7 @@
 </div>
 
 
-<div class="row">
+<div class="row tri-cards">
   <div class="col-4 col">
  <div class="card" >
  {% comment %} style="width: 15rem;" {% endcomment %}
