--- a/templates/journal_profile.html
+++ b/templates/journal_profile.html
@@ -185,7 +185,7 @@
             <div class="card-body card_body_contain">
 
           <div class="navbar_box">
-              <a href="/" class="paper-btn btn-info">Home</a>
+              <a href="/home" class="paper-btn btn-info">Home</a>
               <a href="{% url 'blog' %}" class="paper-btn btn-info">Blog</a>
               <a href="{% url 'logout' %}" class="paper-btn btn-info">Logout</a>
           </div>
