--- a/templates/404.html
+++ b/templates/404.html
@@ -16,7 +16,7 @@
   <body>
 
 <div class="navbar_box">
-    <a href="/" class="paper-btn btn-info">Home</a>
+    <a href="/home" class="paper-btn btn-info">Home</a>
   </div>
 
 <p> Page not Found 404 </p>
