--- a/templates/blog/article.html
+++ b/templates/blog/article.html
@@ -64,10 +64,10 @@ button, button:hover, button:active {
 <div class="container-fluid margin-left-medium"> 
   <div class="navbar_box">
     {% if user.is_authenticated %}
-    <a href="/" class="paper-btn btn-info">Home</a>
+    <a href="/home" class="paper-btn btn-info">Home</a>
     <a href="{% url 'blog' %}" class="paper-btn btn-info">Back to Blog</a>
     {% else %}
-    <a href="/" class="paper-btn btn-info">Home</a>
+    <a href="/home" class="paper-btn btn-info">Home</a>
     <a href="{% url 'blog' %}" class="paper-btn btn-info">Blog</a>
     {% endif %}
   </div>
