--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -139,14 +139,14 @@
 <div class="contianer-fluid">
     {% if user.is_authenticated %}
         <div class="navbar_box">
-            <a href="/" class="paper-btn btn-info">Home</a>
+            <a href="/home" class="paper-btn btn-info">Home</a>
             <a href="{% url 'journal' %}" class="paper-btn btn-info">Your Journal</a>
             <a href="/create_post" class="paper-btn btn-info">Create Post</a>
             <a href="{% url 'logout' %}" class="paper-btn btn-info">Logout</a>
         </div>
     {% else %}
         <div class="navbar_box">
-            <a href="/" class="paper-btn btn-info">Home</a>
+            <a href="/home" class="paper-btn btn-info">Home</a>
         </div>
     {% endif %}
 </div>
