--- a/templates/forms/form.html
+++ b/templates/forms/form.html
@@ -15,7 +15,7 @@
   <body>
 <div class="container"> 
   <div class="navbar_box">
-    <a href="/" class="paper-btn btn-info">Home</a>
+    <a href="/home" class="paper-btn btn-info">Home</a>
     {% if user.is_authenticated %}<a href="{% url 'blog' %}" class="paper-btn btn-info">Back to Blog</a>{% endif %}
   </div>
   {% if messages %}
