--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -71,7 +71,7 @@
         height: 460px;
         width: 400px;
         border: 2px solid gray;
-        background: linear-gradient(135deg, blue, red);
+        background: linear-gradient(135deg, #87CEEB, #F5FFFA);
         transition: 0.5s;
     }
     .card:hover .card-image{
