--- a/templates/home.html
+++ b/templates/home.html
@@ -6,28 +6,21 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
      <link rel="stylesheet" href="https://unpkg.com/papercss@1.8.2/dist/paper.min.css">
-
     <title>Journal</title>
   </head>
-  
   <style>
   :root {
     --level-one: translateZ(3rem);
     --level-two: translateZ(6rem);
     --level-three: translateZ(9rem);
-
     --fw-normal: 400;
     --fw-bold: 700;
-
     --clr: #F5FFFA;
   }
-
   .card-box {
     width: 200px;
   }
-
   .card-bodyy {
     text-align: center;
     position: relative;
@@ -36,11 +29,9 @@
     background: white;
     transform-style: preserve-3d;
   }
-  
   .card-box:hover .card-bodyy {
     transform: rotateY(.5turn);
   }
-
   .card__front,
   .card__back {
     position: absolute;
@@ -52,18 +43,14 @@
     backface-visibility: hidden;
     transform-style: preserve-3d;
     display: grid;
-    align-content: center;
+    align-content: center:
   }
-
   .card__front {
     background-color: var(--clr);
     background-size: cover;
     background-blend-mode: overlay;
     color: #333;
   }
-
-
-
   .card__front::before {
     content: '';
     position: absolute;
@@ -75,172 +62,118 @@
     border: 3px solid currentColor;
     transform: var(--level-one);
   }
-
   .card-titlee {
     font-size: 2rem;
     transform: var(--level-three);
     order: 2;
     text-transform: uppercase;
   }
-
   .card-subtitlee {
     transform: var(--level-two);
     text-transform: uppercase;
     letter-spacing: 3px;
     font-weight: var(--fw-bold);
     opacity: .7;
-
   }
-
   .card-textt {
     transform: var(--level-two);
     font-weight: var(fw-normal);
     font-size: 1rem;
     line-height: 1;
   }
-  
-
   .card__back {
     transform: rotateY(.5turn);
+    {% comment %} color: var(--clr); {% endcomment %}
+    {% comment %} background: #333; {% endcomment %}
   }
-
-  .home-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  .pic {
+    float:left;
+    position: relative;
+    left: 150px;
   }
-
-  .navbar_box a{
-    width: 200px;
-    text-align: center;
-  }
-
- .not_authentication_buttons {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-
-  .not_authentication_buttons a {
-    width: 250px;
-  }
-
-  .life-heading {
-    text-align: center;
-  }
-
-  .tri-cards {
-    margin-top: -25px;
-  }
-
   </style>
-
-
-
-
-
   <body> 
-
 <br/>
-
-<div class="container home-container">
-<div class="navbar_box authentication_buttons">
+<div class="container">
+<div class="navbar_box">
   {% if user.is_authenticated %} {% csrf_token %}
    <a href="{% url 'journal' %}" class="paper-btn btn-info">Your Journal</a>
    <a href="{% url 'blog' %}" class="paper-btn btn-info">Blog</a>
    <a href="{% url 'logout' %}" class="paper-btn btn-info">Logout</a>
 </div>
-
 <h2>Hi {{ user|capfirst }} Welcome 🤗 !!!</h2>
-
 {% else %}
-
-<div class="navbar_box not_authentication_buttons">
+<div class="navbar_box">
  <a href="{% url 'register' %}" class="paper-btn btn-info"> New User: Sign Up Here!</a>
  <a href="{% url 'login' %}" class="paper-btn btn-info">Login</a>
  <a href="{% url 'blog' %}" class="paper-btn btn-info">Check out Blogs</a>
 </div>
-
-<h2 class="life-heading"> 📓 Life, At Your Own Pace 📓 </h2> 
-  
-{% endif %}
-
-<div class="row">
- <div class="row home-row">
-    <div class="col home-col">
-        <div class="card card-box" style="width: 20rem;" >  
-        <div class="card-bodyy">
-        <div class="card__front">
-          <h3 class="card-titlee">Your Personal Bullet Journal!</h3>
-          <h5 class="card-subtitlee">Hover Me:</h5> 
-        </div>
-        <div class="card__back">
-          <p class="card-textt"> Bullet journal, or bullet journaling, 
-          is a creative way to schedule your day, week, month, or year.
-          A bullet journal is also used to keep track of what you have done or what you haven't.
-          Yasss, stay on top of your academics and track mental health-related ideas.</p>
-          <h6 class="card-textt">The Creators: <br/> Matthew Morris, Tim La, Wesley Salesberry, Stephanie Guirand</h6>
-        </div>
+  <h2> Life, At Your Own Pace 📓 </h2>
+  {% comment %} <h3>🥊 READYYYYYYY To Bullet JOURNALLLLLLL 🥊</h3>  {% endcomment %}
+  {% endif %}
+<div class="row ">
+  <div class="card card-box" style="width: 20rem;" >  
+  <div class="card-bodyy">
+   <div class="card__front">
+    <h3 class="card-titlee">Your Personal Bullet Journal!</h3>
+    <h5 class="card-subtitlee">🖱 Mouse over to see 🖱  Uses:</h5> 
+   </div>
+   <div class="card__back">
+    <p class="card-textt"> Bullet journal, or bullet journaling, 
+    is a creative way to schedule your day, week, month, or year.
+    A bullet journal is also used to keep track of what you have done or what you haven't.
+    Yasss, stay on top of your academics and track mental health-related ideas.</p>
+    <h6 class="card-textt">The Creators: <br/> Matthew Morris, Tim La, Wesley Salesberry, Stephanie Guirand</h6>
+   </div>
+ </div>
+   {% if user.is_authenticated %} 
+    <div class="card-body">
+      <h3 class="card-text"> We hope You are enjoying the site!</h3>
     </div>
-
-      {% if user.is_authenticated %} 
-        <div class="card-body">
-          <h3 class="card-text" style="text-align: center;"> We hope You are enjoying the site!</h3>
-        </div>
-      {% endif %}
-    </div>
-
-   
-
+   {% endif %}  
+ </div>
+  <div class="sm-4 col journal_image pic">
+  <div class="card" >
+  <img
+   src="{% static 'authentication/journal3.jpeg' %}"
+   alt="BJM Logo" />
   </div>
-
+  </div>
 </div>
-
-
-<div class="row tri-cards">
+<div class="row">
   <div class="col-4 col">
  <div class="card" >
  {% comment %} style="width: 15rem;" {% endcomment %}
     <p class="card-header text-danger">PLAN</p> 
    <div class="card-body">
     <h5 class="card-title">  Make better task arrangements:</h5> 
-    <p class="card-text">By having a view of your week. 
+    <p class="card-text">by having a view of your week. 
      Our site will help you achieve this while maintaining balance.</p>
    </div>
   </div>
  </div>
-
-  
-  
  <div class="col-4 col">
   <div class="card" >
   {% comment %} style="width: 15rem;" {% endcomment %}
     <p class="card-header text-warning">TRACK</p>
    <div class="card-body">
     <h5 class="card-title"> Keep up with important practices:</h5>
-    <p class="card-text"> Exercise, water consumption, academics, book reading etc. 
+    <p class="card-text"> exercise, water consumption, academics, book reading etc. 
      Live life with momentum.</p>
    </div>
   </div>
  </div>
-  
-
   <div class="col-4 col">
    <div class="card" >
    {% comment %} style="width: 15rem;" {% endcomment %}
     <p class="card-header text-success">LISTS</p>
     <div class="card-body">
      <h5 class="card-title">Always know your progress toward a goal:</h5> 
-      <p class="card-text"> By tracking to-do items. 
+      <p class="card-text"> by tracking to-do items. 
        Tasks in lists can be edited know exactly when to do what.</p>
     </div>
    </div>
   </div>
-
-
-
-
 </div>
 </body>
 </html>
