changed form description

--- a/templates/journal_profile.html
+++ b/templates/journal_profile.html
@@ -243,10 +243,10 @@
                   <h1 class="hide_skew">Hi</h1>
                   <h1 class="hide_skew">Hi</h1>
                 </div> -->
-                <h2 class="hide_skew">Learn Every Day</h2>
+                <h2 class="hide_skew">Accomplish Your Goals</h2>
                 <div class="skew">
-                  <h4 class="hide_skew">"Learning is the only thing the mind never exhaust, never fears, and never regret"</h4>
-                  <h3 href="#" class="hide_skew">Leonardo Da Vinci</h3>
+                  <h4 class="hide_skew">"When you succeed at something, your brain releases dopamine, a reward chemical which boosts memory and triggers increased concentration and a desire to repeat the experience"</h4>
+                  <h3 href="#" class="hide_skew">-Apartment Therapy</h3>
                 </div>
               </div>
           </div>
