--- a/templates/blog/results.html
+++ b/templates/blog/results.html
@@ -66,7 +66,7 @@
             <a href="{% url 'logout' %}" class="paper-btn btn-info">Logout</a>
         </div>
     {% else %}
-            <a href="/" class="paper-btn btn-info">Home</a>
+            <a href="/home" class="paper-btn btn-info">Home</a>
             <a href="{% url 'blog' %}" class="paper-btn btn-info">Blog</a>
     {% endif %}
 </div>
